--- a/myml/tf/Dockerfile
+++ b/myml/tf/Dockerfile
@@ -25,7 +25,7 @@ ENV PATH="/home/myml/.local/bin:${PATH}"
 
 # Install packages
 RUN python -m pip install --upgrade pip \
-    && pip3 install --user --upgrade numpy scipy matplotlib ipython jupyterlab jupyter pandas scikit-learn seaborn requests pytest pylint wandb \
+    && pip3 install --user --upgrade numpy scipy matplotlib ipython jupyterlab jupyter pandas scikit-learn seaborn requests pytest pylint wandb pylint \
     && python -m ipykernel install --user --display-name ipykernel
 
 RUN pip3 install --user --upgrade tensorflow-hub tensorflow-datasets tensorflow-model-optimization tensorflow-lattice tensorflow-probability tensorflow-io tensorflow-cloud tensorflow-text tfx
