--- a/myml/pytorch_projector/Dockerfile
+++ b/myml/pytorch_projector/Dockerfile
@@ -28,7 +28,7 @@ ENV PATH="/home/myml/.local/bin:${PATH}"
 
 # Install packages
 RUN python -m pip install --upgrade pip \
-    && pip3 install --user --upgrade numpy scipy matplotlib ipython jupyterlab jupyter pandas scikit-learn seaborn requests pytest pylint wandb projector-installer \
+    && pip3 install --user --upgrade numpy scipy matplotlib ipython jupyterlab jupyter pandas scikit-learn seaborn requests pytest pylint wandb pylint projector-installer \
     && python -m ipykernel install --user --display-name ipykernel
 
 RUN pip3 install --user torch==1.9.0+cu111 torchvision==0.10.0+cu111 torchaudio==0.9.0 -f https://download.pytorch.org/whl/torch_stable.html
