--- a/myml/tf/Dockerfile
+++ b/myml/tf/Dockerfile
@@ -26,11 +26,11 @@ ENV PATH="/home/myml/.local/bin:${PATH}"
 
 # Install packages
 RUN python -m pip install --upgrade pip \
-    && pip3 install --user --upgrade numpy scipy matplotlib ipython jupyterlab jupyter pandas scikit-learn seaborn requests pytest pylint wandb pylint \
+    && pip3 install --user --upgrade numpy scipy matplotlib ipython jupyterlab jupyter pandas scikit-learn seaborn requests pytest pylint \
+    && pip3 install --user --upgrade wandb gensim spacy nltk \
     && python -m ipykernel install --user --display-name ipykernel
 
-RUN pip3 install --user --upgrade tensorflow-hub tensorflow-datasets tensorflow-model-optimization tensorflow-lattice tensorflow-probability tensorflow-io tensorflow-cloud tensorflow-text tfx
-
+RUN pip3 install --user --upgrade tensorflow-hub tensorflow-datasets tensorflow-probability tensorflow-text tensor2tensor trax tensorflow-io tensorflow-addons
 
 # Install xonsh
 RUN pip3 install 'xonsh[full]' \
