--- a/myml/pytorch/Dockerfile
+++ b/myml/pytorch/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y \
 	git \
 	vim \
 	sudo \
-    wget
+        wget
 
 
 # Create a sudo user myml
@@ -26,7 +26,7 @@ ENV PATH="/home/myml/.local/bin:${PATH}"
 
 # Install packages
 RUN python -m pip install --upgrade pip \
-    && pip3 install --user --upgrade numpy scipy matplotlib ipython jupyterlab jupyter pandas scikit-learn seaborn requests pytest pylint \
+    && pip3 install --user --upgrade numpy scipy matplotlib ipython jupyterlab jupyter pandas scikit-learn seaborn requests pytest pylint einops \
     && pip3 install --user --upgrade wandb gensim spacy nltk \
     && python -m ipykernel install --user --display-name ipykernel
 
